# be-home-for-desktop

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: desktop-release.yml  desktop-validation.yml
Assets/BEHomeDesktop/Editor/: BeHomeDesktopProjectBuilder.cs
Assets/BEHomeDesktop/Runtime/: AssemblyInfo.cs
Assets/Runtime/: BE.Home.Desktop.asmdef
Assets/Runtime/Domain/: BdbParsers.cs
Assets/Runtime/Resources/: DesktopApp.uxml  DesktopAppStyles.uss
Assets/Runtime/Services/: BdbProcessService.cs  (+2 more)
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
config/: bdb-sources.json
docs/: README.md  bdb-source-manifest.md  bdb-tool-lifecycle.md  continuous-integration.md  local-development.md  managed-storage.md  release-automation.md  release-signing.md
planning/: README.md  mvp-plan.md
src/: App.css  App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  apk.rs  bdb.rs  bdb_tool.rs  device.rs  installed_titles.rs  lib.rs  library.rs  main.rs  process_runner.rs  setup.rs  shell.rs  storage.rs
src/about-window/: AboutWindowApp.tsx
src/desktop/: client.ts  presentation.ts  types.ts
src/desktop-shell/: MainWindowTitleBar.tsx  constants.ts  formatters.ts  ui.tsx  useWindowTheme.ts
src/main-window/: MainWorkspaceApp.tsx
src/settings-window/: SettingsWindowApp.tsx
src/setup-window/: SetupWizardApp.tsx
(+18 files in other folders)
