[package]
name = "be-home-for-desktop"
version = "0.1.0"
description = "Board Enthusiasts desktop utility shell"
authors = ["Board Enthusiasts"]
edition = "2021"

[lib]
name = "be_home_for_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
